sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/Permits_Licenses__c.object-meta.xml
<CustomObject>
    <description>Create profile for license &amp; permits status</description>
    <label>Permits &amp; Licenses</label>
    <nameField>
        <displayFormat>P/L -{00000}</displayFormat>
        <label>Permits &amp; Licenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permits &amp; Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>