sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <description>Valid = checked, Expired  = unchecked</description>
    <formula>today() &lt;=  Expiry_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valid = checked, Expired  = unchecked</inlineHelpText>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>