sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <description>No. of days remaining till record/permit/license expires</description>
    <formula>Expiry_date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No. of days remaining till record/permit/license expires</inlineHelpText>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>