sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/fields/Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_date__c</fullName>
    <label>Expiry date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>