sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/fields/First_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder_Date__c</fullName>
    <description>First reminder date is 3 months from the due date</description>
    <formula>Expiry_date__c  - 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First reminder date is 3 months from the due date</inlineHelpText>
    <label>First Reminder Date</label>
    <type>Date</type>
</CustomField>