sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/fields/License_type__c.field-meta.xml
<CustomField>
    <fullName>License_type__c</fullName>
    <label>License type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NTSA Inspection</fullName>
            </value>
            <value>
                <fullName>NEMA License</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Subsidized Annual SBPs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>