sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/fields/Sanergy_Asset__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanergy Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sanergy_Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vehicle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Permits &amp; Licenses</relationshipLabel>
    <relationshipName>Permits_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>