sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/recordTypes/Permits_licenses.recordType-meta.xml
<RecordType>
    <fullName>Permits_licenses</fullName>
    <active>true</active>
    <description>Status of Sanergy vehicle permits &amp; licenses</description>
    <label>Permits &amp; licenses</label>
</RecordType>