sfSandBoxCode/force-app/main/default/objects/Permits_Licenses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sanergy_Asset__c</columns>
    <columns>Expiry_date__c</columns>
    <columns>License_type__c</columns>
    <columns>Active_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>